fix: shelf spacing

--- a/src/scss/components/_shelf.scss
+++ b/src/scss/components/_shelf.scss
@@ -16,7 +16,7 @@
     }
 
     li {
-        @include v(margin-bottom, medium);
+        margin: 0;
     }
 
     .cover {
